common-base/crawler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crawer
  template:
    metadata:
      annotations:
      labels:
        app: crawer
    spec:
      containers:
      - name: search-engine-crawler
        image: docker.pkg.github.com/cloud-nation/apps/clawler:release-latest
