common-base/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      annotations:
      labels:
        app: ui
    spec:
      containers:
      - name: search-engine-ui
        image: docker.pkg.github.com/cloud-nation/apps/ui:release-latest
        ports:
        - containerPort: 8000
