common-base/ui-svc-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: ui
spec:
  selector:
    app: ui
  ports:
    - name: dev-ui
      protocol: TCP
      port: 8000
      targetPort: 8000
