common-base/ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-svc
spec:
  selector:
    app: ui
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
